# celtchar

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  celtchar.cabal  ogma-cli.cabal  ogma.sty  stack.yaml  test.md  test.tex  test.up  test.yaml
app/: Main.hs
assets/: ogma.sty
example/: lorem.up  test.md  test.tex  test.txt  test.up  test.yaml
pkg/: PKGBUILD
src/Celtchar/: Metadata.hs  Novel.hs
src/Celtchar/Novel/: Ogmarkup.hs  Structure.hs
src/Text/: Metadata.hs  Novel.hs
src/Text/Novel/: Ogmarkup.hs  Structure.hs
test/: MetadataSpec.hs
