name:                celtchar
version:             0.0.0.0
synopsis:            A tool to build a novel
description:         Please see README.md
homepage:            https://github.com/ogma-project/celtchar#readme
license:             MIT
license-file:        LICENSE
author:              Thomas Letan
maintainer:          contact@thomasletan.fr
copyright:           2016 Thomas Letan
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Celtchar.Metadata
                     , Celtchar.Novel.Structure
                     , Celtchar.Novel
                     , Celtchar.Novel.Ogmarkup
  build-depends:       base >= 4.7 && < 5
                     , ogmarkup >= 3 && < 4
                     , yaml
                     , mtl
                     , filepath
                     , text
                     , pandoc
                     , shakespeare
                     , data-default
                     , megaparsec
  default-language:    Haskell2010

executable celtchar
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-generic
                     , text
                     , file-embed
                     , celtchar
  default-language:    Haskell2010

test-suite celtchar-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , celtchar
                     , raw-strings-qq
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ogma-project/celtchar
