name:                ogma-cli
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/ogma-cli#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Letan
maintainer:          contact@thomasletan.fr
copyright:           2016 Thomas Letan
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Metadata
                     , Text.Novel.Structure
                     , Text.Novel
                     , Text.Novel.Ogmarkup
  build-depends:       base >= 4.7 && < 5
                     , yaml
                     , ogmarkup >= 2.1 && < 3
                     , mtl
                     , filepath
                     , pandoc
                     , data-default
                     , parsec
  default-language:    Haskell2010

executable ogma
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-generic
                     , ogma-cli
  default-language:    Haskell2010

test-suite ogma-cli-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ogma-cli
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ogma-cli
